# CADpython

./: .gitattributes  README.md  cad_generator.py  demo.py  examples.py  extruder_3d.py  generate_3d_gifs.py  llm_parser.py  main.py  pdf_rag.py  pyproject.toml  requirements.txt  text_parser.py
demo_output/: chair_demo.dxf  chair_demo.mtl  chair_demo.stl  dining_table_6_people.dxf  dining_table_6_people.stl  modern_house.dxf  modern_house.mtl  modern_house.stl  room_demo.dxf  room_demo.mtl  room_demo.stl  round_dining_table.dxf  round_dining_table.mtl  round_dining_table.stl  three_seat_sofa.dxf  three_seat_sofa.mtl  three_seat_sofa.stl  wardrobe.dxf  wardrobe.mtl  wardrobe.stl
examples_output/: kamar_tidur.dxf  kamar_tidur.stl  kursi_makan.dxf  kursi_makan.stl  meja_kerja.dxf  meja_kerja.stl
