

[project]
name = "cadpython"
version = "0.1.0"
description = "Automated CAD generation system with RAG and Indonesian-to-English translation"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Lis Wahyuni", email = "liswahyuni@example.com" }
]
keywords = ["cad", "rag", "3d-modeling", "dxf", "svg", "stl", "translation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]

dependencies = [
    "pypdf2",                    # PDF parsing
    "sentence-transformers",     # Embeddings for RAG
    "torch",                     # Neural networks backend
    "numpy<2",                   # Numerical computing
    "ezdxf",                     # DXF generation
    "svgwrite",                  # SVG generation
    "numpy-stl",                 # STL generation
    "trimesh>=4.8.3",            # 3D mesh processing
    "chromadb>=1.2.0",           # Vector database
    "matplotlib",                # 3D visualization and GIF generation
    "pillow",                    # Image processing for GIF
    "ollama",                    # Local LLM inference (Llama 3.2)
]

[project.urls]
Homepage = "https://github.com/liswahyuni/CADpython"
Repository = "https://github.com/liswahyuni/CADpython"
Documentation = "https://github.com/liswahyuni/CADpython#readme"
Issues = "https://github.com/liswahyuni/CADpython/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
